copy over SF changes from scripts-dev
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/velero/schedule/common-service-db/cs-db-backup-deployment.yaml
+++ b/velero/schedule/common-service-db/cs-db-backup-deployment.yaml
@@ -28,7 +28,7 @@ spec:
           - sh
           - -c
           - sleep infinity
-          image: icr.io/cpopen/cpfs/cpfs-utils:4.5.0 #4.1.0 if using CS 4.1, 4.2.0 if using CS 4.2, etc based on CS version.
+          image: icr.io/cpopen/cpfs/cpfs-utils:4.6.0 #4.1.0 if using CS 4.1, 4.2.0 if using CS 4.2, etc based on CS version.
           imagePullPolicy: IfNotPresent
           name: cs-db-br
           resources:
@@ -47,6 +47,8 @@ spec:
             name: cs-db-backup-mount
           - name: scripts
             mountPath: "/cs-db"
+          - mountPath: /cs-db/cs-db-backup/logs
+            name: logs
         dnsPolicy: ClusterFirst
         schedulerName: default-scheduler
         securityContext:
@@ -62,3 +64,5 @@ spec:
           configMap:
             name: cs-db-br-configmap
             defaultMode: 0777
+        - emptyDir: {}
+          name: logs
