--- a/velero/spectrum-fusion/cpfs-util-resources/cpfs-util-job.yaml
+++ b/velero/spectrum-fusion/cpfs-util-resources/cpfs-util-job.yaml
@@ -13,6 +13,7 @@ spec:
       labels:
         foundationservices.cloudpak.ibm.com: cpfs-util-backup
     spec:
+      restartPolicy: OnFailure
       containers:
       #- command: ["/bin/bash", "-c", "/cs-br/setup_tenant.sh --operator-namespace <operator namespace> --services-namespace <services namespace> --tethered-namespaces <comma delimited (no spaces) list of Cloud Pak workload namespaces that use this foundational services instance> --license-accept -c v<foundational services version number in use i.e. 4.0, 4.1, 4.2, etc> -p <.spec.size value from commonservice cr> -i <install mode, either Manual or Automatic>"]
       - command: ["/bin/bash", "-c", "/cs-br/setup_tenant.sh --operator-namespace <operator namespace> --services-namespace <services namespace> --license-accept -s opencloud-operators-cd"]
