--- a/velero/spectrum-fusion/cpfs-util-resources/cpfs-util-job.yaml
+++ b/velero/spectrum-fusion/cpfs-util-resources/cpfs-util-job.yaml
@@ -16,7 +16,7 @@ spec:
       restartPolicy: OnFailure
       containers:
       #- command: ["/bin/bash", "-c", "/cs-br/setup_tenant.sh --operator-namespace <operator namespace> --services-namespace <services namespace> --tethered-namespaces <comma delimited (no spaces) list of Cloud Pak workload namespaces that use this foundational services instance> --license-accept -c v<foundational services version number in use i.e. 4.0, 4.1, 4.2, etc> -p <.spec.size value from commonservice cr> -i <install mode, either Manual or Automatic>"]
-      - command: ["/bin/bash", "-c", "/cs-br/setup_tenant.sh --operator-namespace <operator namespace> --services-namespace <services namespace> --license-accept -s opencloud-operators-cd"]
+      - command: ["/bin/bash", "-c", "/cs-br/setup_tenant.sh --operator-namespace cs-op --services-namespace cs-serv --license-accept -s opencloud-operators-cd"]
         image: icr.io/cpopen/cpfs/cpfs-utils:4.6.0
         imagePullPolicy: IfNotPresent
         name: cpfs-util
