Add release-sc2 branch to dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,3 +15,8 @@ updates:
     schedule:
       interval: daily
     target-branch: "release-323"
+  - package-ecosystem: docker
+    directory: "/"
+    schedule:
+      interval: daily
+    target-branch: "release-sc2"
