use deployment to trigger suspended job
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/velero/spectrum-fusion/cpfs-util-resources/setup-tenant-job-configmap.yaml
+++ b/velero/spectrum-fusion/cpfs-util-resources/setup-tenant-job-configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: cpfs-util-br-configmap
+  name: setup-tenant-job-configmap
   namespace: <operator namespace>
   labels:
     foundationservices.cloudpak.ibm.com: cpfs-util-backup
