--- a/velero/spectrum-fusion/cpfs-util-resources/setup-tenant-job-rolebinding.yaml
+++ b/velero/spectrum-fusion/cpfs-util-resources/setup-tenant-job-rolebinding.yaml
@@ -1,16 +1,16 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: cpfs-util-rolebinding
-  namespace: <services or tethered namespace>
+  name: setup-tenant-job-rolebinding
+  namespace: <operator namespace>
   labels:
     foundationservices.cloudpak.ibm.com: cpfs-util-backup
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: cpfs-util-role
-  namespace: <services or tethered namespace> #should match value above
+  name: setup-tenant-job-role
+  namespace: <operator namespace>
 subjects:
 - kind: ServiceAccount
-  name: cpfs-util-sa
+  name: setup-tenant-job-sa
   namespace: <operator namespace>
