--- a/velero/spectrum-fusion/cpfs-util-resources/setup-tenant-job.yaml
+++ b/velero/spectrum-fusion/cpfs-util-resources/setup-tenant-job.yaml
@@ -4,20 +4,19 @@ metadata:
   name: setup-tenant-job
   namespace: <operator namespace>
   labels:
-    foundationservices.cloudpak.ibm.com: cpfs-util-backup
+    foundationservices.cloudpak.ibm.com: setup-tenant-job
 spec:
   template:
     metadata:
       name: setup-tenant-job
       namespace: <operator namespace>
       labels:
-        foundationservices.cloudpak.ibm.com: cpfs-util-backup
+        foundationservices.cloudpak.ibm.com: setup-tenant-job
     spec:
       suspend: true
       restartPolicy: OnFailure
       containers:
-      #- command: ["/bin/bash", "-c", "/cs-br/setup_tenant.sh --operator-namespace <operator namespace> --services-namespace <services namespace> --tethered-namespaces <comma delimited (no spaces) list of Cloud Pak workload namespaces that use this foundational services instance> --license-accept -c v<foundational services version number in use i.e. 4.0, 4.1, 4.2, etc> -p <.spec.size value from commonservice cr> -i <install mode, either Manual or Automatic>"]
-      - command: ["/bin/bash", "-c", "/cs-br/setup_tenant.sh --operator-namespace cs-op --services-namespace cs-serv --license-accept -s opencloud-operators-cd"]
+      - command: ["/bin/bash", "-c", "/cs-br/setup_tenant.sh --operator-namespace <operator namespace> --services-namespace <services namespace> --tethered-namespaces <comma delimited (no spaces) list of Cloud Pak workload namespaces that use this foundational services instance> --license-accept -c v<foundational services version number in use i.e. 4.0, 4.1, 4.2, etc> -p <.spec.size value from commonservice cr> -i <install mode, either Manual or Automatic>"]
         image: icr.io/cpopen/cpfs/cpfs-utils:4.6.0
         imagePullPolicy: IfNotPresent
         name: cpfs-util
@@ -43,8 +42,8 @@ spec:
       schedulerName: default-scheduler
       securityContext:
         runAsNonRoot: true
-      serviceAccount: cpfs-util-sa
-      serviceAccountName: cpfs-util-sa
+      serviceAccount: setup-tenant-job-sa
+      serviceAccountName: setup-tenant-job-sa
       terminationGracePeriodSeconds: 30
       volumes:
       - name: cpfs-util-mount
