--- a/velero/spectrum-fusion/recipes/4.7-example-recipe-multi-ns.yaml
+++ b/velero/spectrum-fusion/recipes/4.7-example-recipe-multi-ns.yaml
@@ -299,27 +299,6 @@ spec:
       selectResource: zen.cpd.ibm.com/v1/zenservice
       timeout: 1800
       type: check
-    - labelSelector: foundationservices.cloudpak.ibm.com=test-data
-      name: hook
-      namespace: <service namespace>
-      onError: fail
-      ops:
-        - command: |
-            ["/bin/bash", "-c","/test/backup_mongo.sh", "<service namespace>"]
-          container: test-backup-job
-          name: backup-mongo
-          timeout: 600
-        - command: |
-            ["/bin/bash", "-c","/test/restore_mongo.sh", "<service namespace>"]
-          container: test-backup-job
-          name: restore-mongo
-          timeout: 600
-        - command: '["/usr/bin/sleep", "120"]'
-          container: test-backup-job
-          name: mongo-delay
-          timeout: 140
-      selectResource: pod
-      type: exec
     - labelSelector: foundationservices.cloudpak.ibm.com=cpfs-util-backup
       name: setup-tenant
       namespace: <operator namespace>
@@ -332,6 +311,30 @@ spec:
           timeout: 600
       selectResource: pod
       type: exec
+    - labelSelector: foundationservices.cloudpak.ibm.com=cpfs-util-backup
+      name: setup-tenant-job
+      namespace: <operator namespace>
+      onError: fail
+      ops:
+        - command: |
+            ["/bin/bash", "-c", "oc patch job setup-tenant-job -n <operator namespace> --type="json" -p '[{"op": "remove", "path":"/spec/suspend"}]'"]
+          container: cpfs-util
+          name: trigger-setup-tenant-job
+          timeout: 600
+      selectResource: pod
+      type: exec
+    - chks:
+        - condition: '{$.status.phase} == {"Succeeded"}'
+          name: jobComplete
+          onError: fail
+          timeout: 600
+      labelSelector: foundationservices.cloudpak.ibm.com=setup-tenant-job
+      name: setup-tenant-job-check
+      namespace: cs-op
+      onError: fail
+      selectResource: pod
+      timeout: 600
+      type: check
     - chks:
         - condition: '{$.status.phase} == {"Running"}'
           name: podReady
@@ -445,7 +448,9 @@ spec:
         - group: cpfs-util-volume
         - group: setup-tenant-resources
         - hook: setup-tenant-check/podReady
-        - hook: setup-tenant/setup-tenant-command
+        # - hook: setup-tenant/setup-tenant-command
+        - hook: setup-tenant-job/trigger-setup-tenant-job
+        - hook: setup-tenant-job-check/jobComplete
         - hook: odlm-check/podReady
         - group: odlm-resources
         - group: operand-resources
