--- a/bundle/manifests/operator.ibm.com_commonservices.yaml
+++ b/bundle/manifests/operator.ibm.com_commonservices.yaml
@@ -8,6 +8,7 @@ metadata:
     app.kubernetes.io/instance: ibm-common-service-operator
     app.kubernetes.io/managed-by: ibm-common-service-operator
     app.kubernetes.io/name: ibm-common-service-operator
+    foundationservices.cloudpak.ibm.com: crd
   name: commonservices.operator.ibm.com
 spec:
   group: operator.ibm.com
