--- a/velero/spectrum-fusion/recipes/4.7-example-recipe-single-ns.yaml
+++ b/velero/spectrum-fusion/recipes/4.7-example-recipe-single-ns.yaml
@@ -97,16 +97,6 @@ spec:
       type: resource
     - includeClusterResources: true
       includedResourceTypes:
-        - deployments
-        - roles
-        - serviceaccounts
-        - rolebindings
-        - configmaps
-      labelSelector: foundationservices.cloudpak.ibm.com=cpfs-util-backup
-      name: setup-tenant-resources
-      type: resource
-    - includeClusterResources: true
-      includedResourceTypes:
         - customresourcedefinitions.apiextensions.k8s.io
       labelSelector: foundationservices.cloudpak.ibm.com=crd
       name: nss-crd
@@ -151,7 +141,6 @@ spec:
     - includeClusterResources: true
       includedResourceTypes:
         - zenservices.zen.cpd.ibm.com
-        - customresourcedefinitions.apiextensions.k8s.io
       labelSelector: foundationservices.cloudpak.ibm.com=zen
       name: zen
       type: resource
@@ -161,12 +150,6 @@ spec:
         - zenservices.zen.cpd.ibm.com
       labelSelector: foundationservices.cloudpak.ibm.com=zen
       name: zen-instance
-      type: resource
-    - backupRef: zen
-      includeClusterResources: true
-      includedResourceTypes:
-        - customresourcedefinitions.apiextensions.k8s.io
-      name: zen-crd
       type: resource
     - backupRef: zen-br-resources
       includeClusterResources: true
@@ -284,6 +267,42 @@ spec:
       selectResource: pod
       timeout: 600
       type: check
+    - chks:
+        - condition: '{$.spec.replicas} == {$.status.readyReplicas}'
+          name: podReady
+          onError: fail
+          timeout: 600
+      name: platform-identity-provider
+      nameSelector: platform-identity-provider
+      namespace: <operator namespace>
+      onError: fail
+      selectResource: deployment
+      timeout: 600
+      type: check
+    - chks:
+        - condition: '{$.spec.replicas} == {$.status.readyReplicas}'
+          name: podReady
+          onError: fail
+          timeout: 600
+      name: platform-auth-service
+      nameSelector: platform-auth-service
+      namespace: <operator namespace>
+      onError: fail
+      selectResource: deployment
+      timeout: 600
+      type: check
+    - chks:
+        - condition: '{$.spec.replicas} == {$.status.readyReplicas}'
+          name: podReady
+          onError: fail
+          timeout: 600
+      name: platform-identity-management
+      nameSelector: platform-identity-management
+      namespace: <operator namespace>
+      onError: fail
+      selectResource: deployment
+      timeout: 600
+      type: check
     - labelSelector: foundationservices.cloudpak.ibm.com=cs-db-data
       name: cs-db-data
       namespace: <operator namespace>
@@ -355,7 +374,6 @@ spec:
         - group: commonservice-crd
         - group: commonservice-cr
         - group: cs-operator-permissions
-        - group: setup-tenant-resources
         - group: singleton-subscriptions
         - group: cert-manager-resources
         - group: licensing-resources
@@ -390,6 +408,9 @@ spec:
         - group: cs-db-volume
         - group: cs-db-deployment
         - hook: cs-db-deployment/podReady
+        - hook: platform-identity-management/podReady
+        - hook: platform-auth-service/podReady
+        - hook: platform-identity-provider/podReady
         - hook: cs-db-data/restore
         - hook: zen-metastore-edb-check/podReady
         - group: zen-pre-deploy
