--- a/velero/spectrum-fusion/recipes/4.0-4.5-example-recipe-single-ns.yaml
+++ b/velero/spectrum-fusion/recipes/4.0-4.5-example-recipe-single-ns.yaml
@@ -306,7 +306,7 @@ spec:
       onError: fail
       ops:
         - command: |
-            ["/bin/bash","-c", "'rm -rf /dump/dump/*''; cat /cred/mongo-certs/tls.crt /cred/mongo-certs/tls.key > /work-dir/mongo.pem; cat /cred/cluster-ca/tls.crt /cred/cluster-ca/tls.key > /work-dir/ca.pem; mongodump --oplog --out /dump/dump --host mongodb:$MONGODB_SERVICE_PORT --username $ADMIN_USER --password $ADMIN_PASSWORD --authenticationDatabase admin --ssl --sslCAFile /work-dir/ca.pem --sslPEMKeyFile /work-dir/mongo.pem"]
+            ["/bin/bash","-c", "'rm -rf /dump/dump/*'; cat /cred/mongo-certs/tls.crt /cred/mongo-certs/tls.key > /work-dir/mongo.pem; cat /cred/cluster-ca/tls.crt /cred/cluster-ca/tls.key > /work-dir/ca.pem; mongodump --oplog --out /dump/dump --host mongodb:$MONGODB_SERVICE_PORT --username $ADMIN_USER --password $ADMIN_PASSWORD --authenticationDatabase admin --ssl --sslCAFile /work-dir/ca.pem --sslPEMKeyFile /work-dir/mongo.pem"]
           container: mongodb-backup
           name: backup
           timeout: 600
