--- a/cp3pt0-deployment/common/nss-managed-bedrock-core-role.yaml
+++ b/cp3pt0-deployment/common/nss-managed-bedrock-core-role.yaml
@@ -679,25 +679,8 @@ rules:
       - ibmevents.ibm.com
     resources:
       - kafkatopics
-  - verbs:
-      - get
-      - list
-      - watch
-      - create
-      - patch
-      - update
-    apiGroups:
-      - ibmevents.ibm.com
-    resources:
-      - kafkausers
-  - verbs:
-      - get
-      - patch
-      - update
-    apiGroups:
-      - ibmevents.ibm.com
-    resources:
       - kafkatopics/status
+      - kafkausers
       - kafkausers/status
   - verbs:
       - create
@@ -748,33 +731,27 @@ rules:
       - list
       - watch
       - create
+      - delete
       - patch
       - update
     apiGroups:
       - ibmevents.ibm.com
     resources:
       - kafkas
-      - kafkanodepools
-      - kafkaconnects
-      - kafkaconnectors
-      - kafkamirrormakers
-      - kafkabridges
-      - kafkamirrormaker2s
-      - kafkarebalances
-  - verbs:
-      - get
-      - patch
-      - update
-    apiGroups:
-      - ibmevents.ibm.com
-    resources:
       - kafkas/status
+      - kafkanodepools
       - kafkanodepools/status
+      - kafkaconnects
       - kafkaconnects/status
+      - kafkaconnectors
       - kafkaconnectors/status
+      - kafkamirrormakers
       - kafkamirrormakers/status
+      - kafkabridges
       - kafkabridges/status
+      - kafkamirrormaker2s
       - kafkamirrormaker2s/status
+      - kafkarebalances
       - kafkarebalances/status
   - verbs:
       - get
