--- a/velero/spectrum-fusion/cpfs-util-resources/cpfs-util-clusterrole.yaml
+++ b/velero/spectrum-fusion/cpfs-util-resources/cpfs-util-clusterrole.yaml
@@ -14,3 +14,84 @@ rules:
       - ''
     resources:
       - namespaces
+  #cs db
+  - verbs:
+      - create
+      - get
+      - delete
+      - watch
+      - update
+      - list
+      - patch
+    apiGroups:
+      - ''
+      - batch
+      - extensions
+      - apps
+      - policy
+      - rbac.authorization.k8s.io
+    resources:
+      - pods
+      - pods/log
+      - deployments
+      - deployments/scale
+      - statefulsets
+      - statefulsets/scale
+      - pods/exec
+      - pods/portforward
+      - endpoints
+      - pods/status
+      - jobs
+      - secrets
+      - serviceaccounts
+      - roles
+      - rolebindings
+      - persistentvolumeclaims
+  - verbs:
+      - get
+      - list
+    apiGroups:
+      - postgresql.k8s.enterprisedb.io
+    resources:
+      - clusters
+  #zen 5 permissions
+  - verbs:
+      - create
+      - get
+      - delete
+      - watch
+      - update
+      - list
+      - patch
+    apiGroups:
+      - ''
+      - batch
+      - extensions
+      - apps
+      - policy
+    resources:
+      - pods
+      - secrets
+      - configmaps
+      - deployments
+      - deployments/scale
+      - cronjobs
+      - pods/exec
+      - cronjob
+  - verbs:
+      - get
+      - list
+      - patch
+    apiGroups:
+      - zen.cpd.ibm.com
+      - postgresql.k8s.enterprisedb.io
+    resources:
+      - zenservices
+      - zenextensions
+      - clusters
+  - verbs:
+      - get
+    apiGroups:
+      - ""
+    resources:
+      - configmaps
