remove workflow restore CRs, genericize recipe ones
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/velero/spectrum-fusion/recipes/4.8-example-csdb-sync-recipe.yaml
+++ b/velero/spectrum-fusion/recipes/4.8-example-csdb-sync-recipe.yaml
@@ -127,7 +127,7 @@ spec:
           container: cpfs-util
           name: cleanup-cs-db-br-resources
           timeout: 600
-      selectResource: pod
+      selectResource: deployment
       type: exec
   workflows:
     - failOn: any-error
