--- a/velero/spectrum-fusion/recipes/4.8-example-zen-sync-recipe.yaml
+++ b/velero/spectrum-fusion/recipes/4.8-example-zen-sync-recipe.yaml
@@ -106,7 +106,7 @@ spec:
           container: cpfs-util
           name: cleanup-zen-br-resources
           timeout: 600
-      selectResource: pod
+      selectResource: deployment
       type: exec
   workflows:
     - failOn: any-error
