--- a/velero/spectrum-fusion/templates/cs-db-sync-restore-template.yaml
+++ b/velero/spectrum-fusion/templates/cs-db-sync-restore-template.yaml
@@ -1,23 +1,22 @@
 apiVersion: data-protection.isf.ibm.com/v1alpha1
 kind: Restore
 metadata:
-  name: july9-test-add-workflow-to-existing-recipe-1
+  name: cs-db-runtime-sync
   namespace: ibm-spectrum-fusion-ns
   finalizers:
     - restore
   labels:
-    dp.isf.ibm.com/application-name: cs-application
-    dp.isf.ibm.com/backuppolicy-name: cs-backup-policy
-    dp.isf.ibm.com/backupstoragelocation-name: luztest
+    dp.isf.ibm.com/application-name: <application name>
+    dp.isf.ibm.com/backuppolicy-name: <backup policy name>
+    dp.isf.ibm.com/backupstoragelocation-name: <backup storage location>
     dp.isf.ibm.com/provider-name: isf-backup-restore
 spec:
-  backup: cs-application-cs-backup-policy-apps.luztest2.cp.fyre.ibm.com-202407090400
+  backup: <backup name>
   recipe:
-    name: cs-recipe
+    name: cs-db-sync-recipe
     namespace: ibm-spectrum-fusion-ns
     apiVersion: spp-data-protection.isf.ibm.com/v1alpha1
     kind: Recipe
-  workflow: restore-cs-db
   objectsToRestore:
     RESOURCES:
       - deployments
@@ -26,6 +25,6 @@ spec:
       - rolebinding
       - configmaps
     v1/persistentvolumeclaim:
-      - cs-serv/cs-db-backup-pvc
-  targetCluster: apps.luztestrestore.cp.fyre.ibm.com
+      - <services namespace>/cs-db-backup-pvc
+  targetCluster: <target cluster>
   skipExistingPVC: false
