--- a/velero/spectrum-fusion/cpfs-util-resources/cpfs-util-services-role.yaml
+++ b/velero/spectrum-fusion/cpfs-util-resources/cpfs-util-services-role.yaml
@@ -1,8 +1,8 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
+kind: Role
 metadata:
-  name: cpfs-util-cluster-role
-  namespace: <operator namespace>
+  name: cpfs-util-services-role
+  namespace: <services namespace>
   labels:
     foundationservices.cloudpak.ibm.com: cpfs-util-backup
 rules:
