add CPFS resource labeling and deployment
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/br-testing-automation/env.properties
+++ b/br-testing-automation/env.properties
@@ -4,8 +4,8 @@ OC="oc"
 YQ="yq"
 SF_NAMESPACE="ibm-spectrum-fusion-ns"
 BR_SERVICE_NAMESPACE="ibm-backup-restore"
-OPERATOR_NAMESPACE="cs-op"
-SERVICES_NAMESPACE="cs-serv"
+OPERATOR_NS="cs-op"
+SERVICES_NS="cs-serv"
 TETHERED_NAMESPACE1="cs-ten1"
 TETHERED_NAMESPACE2="cs-ten2"
 GITHUB_USER=
@@ -15,7 +15,7 @@ DOCKER_PASS=
 STORAGE_CLASS="rook-cephfs"
 BACKUP_STORAGE_LOCATION_NAME="luztest"
 STORAGE_BUCKET_NAME="luztest-bucket"
-S3_URL="https://s3.us-south.cloud-object-storage.appdomain.cloud"
+S3_URL="https\:\/\/s3.us-south.cloud-object-storage.appdomain.cloud"
 STORAGE_SECRET_ACCESS_KEY=
 STORAGE_SECRET_ACCESS_KEY_ID=
 CERT_MANAGER_NAMESPACE="ibm-cert-manager"
@@ -23,3 +23,12 @@ LICENSING_NAMESPACE="ibm-licensing"
 LSR_NAMESPACE="ibm-lsr"
 CPFS_VERSION="4.8"
 ZENSERVICE_NAME="test-zen"
+
+#label-common-services specific env variables
+# Change to 1 to enable private catalog
+ENABLE_PRIVATE_CATALOG=0
+
+# Add additional CatalogSources separated by comma which are withour ".spec.publisher: IBM"
+# For example: "my-catalog,my-catalog2,my-catalog3"
+ADDITIONAL_SOURCES="" 
+CONTROL_NS="" # Pass the control namespace if it is needed to be backed up
