update application and recipe yamls
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/velero/spectrum-fusion/application.yaml
+++ b/velero/spectrum-fusion/application.yaml
@@ -12,6 +12,7 @@ spec:
     - <tenant namespace 2>
     - <cert manager namespace>
     - <licensing namespace>
+    - <lsr namespace>
     - openshift-marketplace    
     - openshift-config
     - kube-public
